Fixing header spacing issue

--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -3,7 +3,7 @@
 // theme provided by https://bootswatch.com .
 
 
-header{
+header#landingpage-cover{
     min-height:60vh;
 }
 
@@ -13,12 +13,12 @@ header{
 }
 
 @media (min-width: 576px){
-  header{ min-height:90vh;}
+  header#landingpage-cover{ min-height:90vh;}
   #mainNav .navbar-brand{font-size: 1rem;}
 }
 
 @media (min-width: 768px){
-  header{ min-height:100vh;}
+  header#landingpage-cover{ min-height:100vh;}
   #mainNav .navbar-brand{ font-size: 1.5rem;}
 }
 
